--- a/pom.xml
+++ b/pom.xml
@@ -5,27 +5,25 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.12</version>
-  	</dependency>
-  	
-  	<!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+
+      <dependency>
+          <groupId>io.springfox</groupId>
+          <artifactId>springfox-swagger2</artifactId>
+          <version>2.8.0</version>
+      </dependency>
+
 	<dependency>
 	    <groupId>org.mybatis.generator</groupId>
 	    <artifactId>mybatis-generator-core</artifactId>
 	    <version>1.3.6</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.1.46</version>
 	</dependency>
 
-  	
   </dependencies>
   
   <build>
